<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/img_news"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cancer_patient"
            android:contentDescription="@string/news_sub"
            />
        <TextView
            android:id="@+id/tv_title_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_news"
            android:padding="12dp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tv_desc_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_news"
            android:padding="12dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
