<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

      <TextView
          android:id="@+id/tv_empty"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tv_empty"
          android:textSize="18sp"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />


  <TextView
      android:id="@+id/tv_history"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/history"
      android:layout_marginStart="12dp"
      android:layout_marginTop="16dp"
      android:textSize="24sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tv_sub_history"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/history_sub"
      android:layout_marginStart="12dp"
      android:layout_marginTop="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_history" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:radius="8dp"
      app:cardElevation="4dp"
      app:layout_constraintTop_toBottomOf="@id/tv_sub_history"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_history"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/cv"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:listitem="@layout/item_history"
      />
</androidx.constraintlayout.widget.ConstraintLayout>
